--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ authors = ["Cole Brazinski <colepbrazinski@gmail.com>"]
 license = "Apache 2"
 
 [dependencies]
+console_log = "1.0.0"
 dioxus = { version = "0.6.0", features = [] }
+log = "0.4.27"
